# lbx-Franka-Teach

./: .gitignore  ASYNC_ARCHITECTURE_README.md  CAMERA_INTEGRATION_README.md  CAMERA_MCAP_RECORDING_SUMMARY.md  CLEANUP_SUMMARY.md  DROID_IK_README.md  FOXGLOVE_COMPATIBILITY_FIXES.md  FOXGLOVE_ROBOT_VISUALIZATION.md  FOXGLOVE_TRANSFORM_WARNINGS.md  HAND_ADJUSTMENT_TOOLS.md  HAND_MOUNTED_CAMERA_UPDATE.md  HAND_OFFSET_ADJUSTMENT.md  HOT_RELOAD_README.md  IMPLEMENTATION_GUIDE_MOVEIT.md  MCAP_RECORDING_README.md  MIGRATION_PLAN_DEOXYS_TO_MOVEIT.md  MIGRATION_SUMMARY.md  MOVEIT_CONFIGURATION_GUIDE.md  MOVEIT_SUCCESS_SUMMARY.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  README.md  VR_ROBOT_MAPPING.md  apply_hand_offset.py  auto_arm.sh  camera_config_example.json  check_foxglove_timing.py  check_mcap_foxglove.py  check_performance_mode.py  check_robot_connection.py  check_robot_state.py  debug_deoxys_messages.py  debug_teleop.py  debug_teleop_complete.py  diagnose_deoxys_crash.py  discover_cameras.py  franka_hand_offset_config.yaml  franka_server.py  franka_server_debug.py  kill_oculus_server.sh  launch_fix_summary.md  (+36 more)
additional_files_backup_20250527_170748/: cleanup_additional_files.sh  cleanup_old_files.sh  simple_vr_server.py  vr_calibration_tool.py
configs/: camera_transforms.yaml  cameras_intel.yaml  cameras_zed_template.yaml
franka_vr_ros2/: README.md  oculus_vr_server.py  oculus_vr_server_hotreload.py  package.xml  requirements.txt  setup.py
franka_vr_ros2/config/robots/fr3/: robot_config.yaml
franka_vr_ros2/config/robots/fr3/moveit/: controllers.yaml  franka_fr3.srdf  joint_limits.yaml  kinematics.yaml  moveit_servo.yaml
franka_vr_ros2/franka_vr_ros2/: __init__.py
franka_vr_ros2/franka_vr_ros2/core/: __init__.py  motion_filter.py  transform.py  types.py  vr_input.py
franka_vr_ros2/franka_vr_ros2/input_devices/: README.md  __init__.py
franka_vr_ros2/franka_vr_ros2/input_devices/apple_vision/: __init__.py
franka_vr_ros2/franka_vr_ros2/input_devices/base/: __init__.py  input_device_base.py
franka_vr_ros2/franka_vr_ros2/input_devices/meta_quest/: __init__.py  buttons_parser.py  fps_counter.py  quest_reader.py
franka_vr_ros2/franka_vr_ros2/recording/: __init__.py  camera_manager.py  mcap_recorder.py
franka_vr_ros2/franka_vr_ros2/strategies/: __init__.py  base.py  cartesian_pose.py  direct_ik.py  moveit_servo.py
franka_vr_ros2/franka_vr_ros2/utils/: __init__.py  ros2_utils.py
franka_vr_ros2/launch/: teleop_system.launch.py
franka_vr_ros2/resource/: franka_vr_ros2
frankateach/: camera_manager.py  camera_test.py  constants.py  franka_server.py  mcap_data_recorder.py  mcap_verifier.py  messages.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lbx_robotics/: build_oculus_package.sh  build_python_packages.sh  check_colcon.sh  cmake_fixes_readme.md  environment.yaml  fix_cmake.sh  fix_cmake_versions.sh  fix_python_editable.sh  fix_setup_cfg.sh  requirements.txt  run.sh  run_teleoperation.sh  setup_environment.sh  test_basic_startup.py  test_realsense_direct.py  test_realsense_robust.py  test_system_startup.py  unified_launch.sh  vr_connection_guide.md  workspace_config.yaml
lbx_robotics/src/lbx_data_recorder/: package.xml  pyproject.toml  setup.cfg.backup  setup.py
lbx_robotics/src/lbx_data_recorder/config/: recorder_config.yaml
lbx_robotics/src/lbx_data_recorder/launch/: recorder.launch.py
lbx_robotics/src/lbx_data_recorder/lbx_data_recorder/: __init__.py  mcap_recorder_node.py  mcap_verifier_script.py  recorder_node.py  utils.py
lbx_robotics/src/lbx_franka_control/: README.md  package.xml  pyproject.toml  setup.cfg.backup  setup.py
lbx_robotics/src/lbx_franka_control/launch/: franka_control.launch.py
lbx_robotics/src/lbx_franka_control/lbx_franka_control/: __init__.py  franka_controller.py  main_system.py  robot_control_node.py  system_manager.py  system_monitor.py  system_orchestrator.py  ui_node.py  vr_teleop_node.py
lbx_robotics/src/lbx_franka_description/: CMakeLists.txt  package.xml
lbx_robotics/src/lbx_franka_description/launch/: load_fr3.launch.py
lbx_robotics/src/lbx_franka_description/urdf/: fr3.urdf  fr3.urdf.xacro  fr3_ros2_control.xacro  franka_arm.ros2_control.xacro
lbx_robotics/src/lbx_franka_moveit/: CMakeLists.txt  package.xml
lbx_robotics/src/lbx_franka_moveit/launch/: moveit_server.launch.py
lbx_robotics/src/lbx_input_oculus/: package.xml  pyproject.toml  setup.cfg.backup  setup.py
lbx_robotics/src/lbx_input_oculus/launch/: oculus_input.launch.py
lbx_robotics/src/lbx_input_oculus/lbx_input_oculus/: __init__.py  oculus_node.py
lbx_robotics/src/lbx_launch/: package.xml  pyproject.toml  setup.cfg  setup.py
lbx_robotics/src/lbx_launch/launch/: system_bringup.launch.py
lbx_robotics/src/lbx_launch/lbx_launch/: __init__.py
lbx_robotics/src/lbx_launch/resource/: lbx_launch
lbx_robotics/src/lbx_utils/: LICENSE.md  package.xml  pyproject.toml  setup.cfg.backup  setup.py
lbx_robotics/src/lbx_utils/lbx_utils/: __init__.py
lbx_robotics/src/lbx_vision_camera/: README.md  package.xml  pyproject.toml  setup.cfg  setup.py
lbx_robotics/src/lbx_vision_camera/launch/: camera.launch.py
lbx_robotics/src/lbx_vision_camera/lbx_vision_camera/: __init__.py  camera_node.py  camera_utilities.py
lbx_robotics/src/lbx_vision_camera/lbx_vision_camera/camera_utilities/: __init__.py  camera_manager.py  camera_test.py  camera_utils.py
log/: latest_build
old_files_backup_20250527_170550/: debug_deoxys_commands.py  debug_hand_rotation.py  debug_robot_comm.py  diagnose_joint_data.py  mouse_control_readme.md  oculus_control_readme.md  test_camera_recording.py  test_hand_rotation.py  verify_camera_recording.py
robot_urdf_models/: README.md  fr3_embedded.urdf  fr3_franka_hand_snug.urdf
ros2_moveit_franka/: .dockerignore  (+13 more)
ros2_moveit_franka/install/ros2_moveit_franka/share/ros2_moveit_franka/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_moveit_franka/install/ros2_moveit_franka/share/ros2_moveit_franka/launch/: franka_demo.launch.py  franka_robust_production.launch.py
(+61 files in other folders)
