<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbx_franka_control</name>
  <version>0.0.1</version>
  <description>Franka robot control with VR teleoperation following DROID-exact pipeline</description>
  <maintainer email="info@lbx-robotics.com">LBX Robotics</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>franka_msgs</depend>
  <depend>lbx_interfaces</depend>
  
  <exec_depend>numpy</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>pyyaml</exec_depend>
  <exec_depend>lbx_franka_moveit</exec_depend>
  <exec_depend>lbx_input_oculus</exec_depend>
  <exec_depend>lbx_data_recorder</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 