[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lbx_franka_control"
version = "0.1.0"
description = "VR-based Franka control system using MoveIt"
license = "MIT"
authors = [
    {name = "labelbox", email = "robotics@labelbox.com"}
]
keywords = ["ros2", "franka", "control", "moveit", "vr"]

# List direct Python dependencies here.
# ROS client libraries like rclpy are typically available in the ROS environment.
# Other dependencies like numpy, PyYAML are often pulled by these or other packages.
# Only list those that this package *directly* imports and are not standard library
# or guaranteed by the ROS installation itself.
# From its setup.py, only 'setuptools' was listed, which is a build dep.
# If system_manager.py, main_system.py, etc. directly import other pip-installable
# packages not covered by your main requirements.txt, list them here.
dependencies = [
    "setuptools" 
]

[project.entry-points."console_scripts"]
system_manager = "lbx_franka_control.system_manager:main"
main_system = "lbx_franka_control.main_system:main"
system_monitor = "lbx_franka_control.system_monitor:main"

[tool.setuptools.packages.find]
exclude = ["test*"]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/lbx_franka_control"]
"share/lbx_franka_control" = ["package.xml"] 