<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schemaLocation="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>lbx_franka_moveit</name>
  <version>1.0.0</version>
  <description>Unified Franka robot MoveIt configuration and teleoperation control package for LBX Robotics</description>
  
  <maintainer email="dev@lbxrobotics.com">LBX Robotics Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <!-- MoveIt 2 dependencies -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_configs_utils</depend>
  
  <!-- franka_ros2 dependencies -->
  <depend>franka_msgs</depend>
  <depend>franka_description</depend>
  <depend>franka_fr3_moveit_config</depend>
  <depend>franka_hardware</depend>
  <depend>franka_robot_state_broadcaster</depend>
  
  <!-- Custom LBX dependencies -->
  <depend>lbx_interfaces</depend>
  <depend>lbx_utils</depend>
  <depend>lbx_franka_description</depend>
  <depend>lbx_input_oculus</depend>
  
  <!-- Robot control dependencies -->
  <depend>controller_manager</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Visualization -->
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  
  <!-- Launch and configuration -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>xacro</depend>
  
  <!-- Development dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 