<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbx_input_oculus</name>
  <version>0.0.1</version>
  <description>ROS2 package to read and publish Oculus Quest controller data.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros_py</depend>
  <depend>python3-numpy</depend> <!-- Or just numpy if managed via pip -->

  <!-- For ppadb, typically installed via pip. Add to requirements.txt or ensure system availability. -->
  <!-- <exec_depend>python3-ppadb</exec_depend> -->


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 