[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lbx_input_oculus"
version = "0.0.1"
description = "ROS2 package to read and publish Oculus Quest controller data."
license = "MIT"
authors = [
    {name = "User", email = "user@example.com"}
]
keywords = ["ros2", "oculus", "vr", "input"]

dependencies = [
    "setuptools",
    "numpy",
    "pure-python-adb",
    "transformations", # Changed from tf-transformations
    "diagnostic_updater"
]

[project.entry-points."console_scripts"]
oculus_node = "lbx_input_oculus.oculus_node:main"

[tool.setuptools.packages.find]
exclude = ["test*"]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/lbx_input_oculus"]
"share/lbx_input_oculus" = ["package.xml"] 