[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lbx_utils"
version = "0.0.1"
description = "Utility functions for LBX Robotics system"
license = "MIT"
authors = [
    {name = "Labelbox Robotics", email = "robotics@labelbox.com"} # Or appropriate maintainer
]
keywords = ["ros2", "utilities"]

dependencies = [
    "setuptools" # If it has direct Python dependencies, list them
]

# No entry points if it's just a library

[tool.setuptools.packages.find]
exclude = ["test*"]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/lbx_utils"]
"share/lbx_utils" = ["package.xml"] 