<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_moveit_franka</name>
  <version>0.0.1</version>
  <description>ROS 2 MoveIt package for controlling Franka FR3 arm</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_commander</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>franka_hardware</depend>
  <depend>franka_fr3_moveit_config</depend>
  <depend>franka_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 